[package]
name = "gts-port-cfg"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes@spacesnek.rocks"]
description = "Generates an interface/port setup script for GTS/Geant VMs on stdout"
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
itertools = "0.8.2"
